--- a/app/home/home.html
+++ b/app/home/home.html
@@ -33,6 +33,7 @@
     <div class="vertical-space"></div>
     <div class="footer">
         <a target="_blank" href="https://github.com/MinhasKamal/DownGit">DownGit</a> by <a target="_blank" href="https://github.com/MinhasKamal">Minhas Kamal</a>
+		<a target="_blank" href="https://downloader.kaaaxcreators.de/impressum.html">Impressum</a> <a target="_blank" href="https://downloader.kaaaxcreators.de/datenschutz.html">Datenschutzerklärung</a>
     </div>
     
 </div>
